Pull #1292, Various fixes to accessibility enhancements to the slider
* Improve CSS style for ".mejs-offscreen" - prefer "top" for RTL languages.
* Make the text "Use Left/Right Arrow keys..." an option - so customized players can modify where and how they present this help text;
* Clarify JS comments - "Accessibility for slider" in place of "[sic] Ally for slider";
* Ensure "updateSlider()" Javascript function is called - to add WAI-ARIA attributes - role, aria-now, aria-min ...;
* (src/js/mep-player.js:282) - ensure "videoPlayerTitle" applies to audio players as well as video players;

--- a/src/css/mediaelementplayer.css
+++ b/src/css/mediaelementplayer.css
@@ -1,6 +1,7 @@
 .mejs-offscreen{
- 	position: absolute !important;
-	left: -10000px;
+/* Accessibility: hide screen reader texts (and prefer "top" for RTL languages). */
+	position: absolute !important;
+	top: -10000px;
 	overflow: hidden;
 	width: 1px;
 	height: 1px;
